--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@huggingface/transformers": "^3.0.0-alpha.14",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
