--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "exametn",
   "version": "1.0.0",
   "description": "The backend for the exam etn mobile application",
-  "main": "index.js",
+  "main": "./src/server.ts",
   "scripts": {
     "start": "nodemon ./src/server.ts",
     "watch": "nodemon ./src/server.ts",
+    "dev": "nodemon ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
