--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "The backend for the exam etn mobile application",
   "main": "./src/server.ts",
   "scripts": {
-    "start": "nodemon ./src/server.ts",
-    "watch": "nodemon ./src/server.ts",
-    "dev": "nodemon ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "ts-node ./src/server.ts",
+  "watch": "nodemon --exec ts-node ./src/server.ts",
+  "dev": "nodemon --exec ts-node ./src/server.ts",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
